# adv_ca_5

./: .gitignore  CMakeLists.txt  array_sum.c  array_sum2.c  array_sum3.c  compile.sh  dotp_omp.c  mdw_runner.sh  runner.sh
linux1_runs/: 16_thread.txt  1_thread.txt  2_thread.txt  32_thread.txt  4_thread.txt  8_thread.txt
